# Babel

./: CMakeLists.txt  conanfile.txt  runBabel.sh
server/: connection.cpp  connection.hpp  database.cpp  database.hpp  main.cpp  server.cpp  server.hpp
src/: CallThread.cpp  CallThread.hpp  Core.cpp  Core.hpp  main.cpp
src/Audio/: Audio.cpp  Audio.hpp  Codec.cpp  Codec.hpp
src/Errors/: Errors.cpp  Errors.hpp
src/Graphic/: Window.cpp  Window.hpp  loginpage.cpp  loginpage.hpp
src/Graphic/Chat/: Chat.cpp  Chat.hpp  Message.cpp  Message.hpp
src/Graphic/ContactList/: ContactList.cpp  ContactList.hpp
src/Graphic/ContactList/Contact/: Contact.cpp  Contact.hpp
src/Graphic/Layout/: CallRunning.cpp  CallRunning.hpp  Home.cpp  Home.hpp  InComingCall.cpp  InComingCall.hpp  WaitingAnswer.cpp  WaitingAnswer.hpp
src/Network/: TcpServer.cpp  TcpServer.hpp  TcpSocket.cpp  TcpSocket.hpp  UdpSocket.cpp  UdpSocket.hpp
